# regulatix

./: CMakeLists.txt  QT_UAR_PK.pro  abstract_file_factory.hpp  all  arx.cpp  arx.h  arx.hpp  chart.cpp  chart.h  chartwidget.cpp  chartwidget.h  chartwidget.ui  cmakelist.txt  csv.hpp  exportdialog.cpp  exportdialog.h  exportdialog.ui  feedback_loop.hpp  file_factory.hpp  file_manager.hpp  generator.cpp  generator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.hpp  pid.cpp  pid.h  pid.hpp  qarx.cpp  qarx.h  qarx_insert_dialog.cpp  qarx_insert_dialog.h  qarx_insert_dialog.ui  qpid.cpp  qpid.h  quar.cpp  quar.h  qwarzad.cpp  (+11 more)
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: qcomparehelpers.h.21FA990D79E89701.idx  qfiledevice.h.B7865556804574B2.idx  qflags.h.8B07B8B71D7A8A5A.idx  qiodevice.h.9AF21CF35FCA005D.idx  qlist.h.9067E39E1303B11B.idx  qmetatype.h.3340AE4918975BE3.idx  qobject.h.9963A5020B468953.idx  qobjectdefs.h.E53E1963C7836325.idx  qobjectdefs.h.F9475B70D9FC04BE.idx  qpid.cpp.4E8E80481419E98A.idx  qtclasshelpermacros.h.443D0286709E65A3.idx  qtmetamacros.h.283037827FB985E2.idx  qwarzad.h.E687B62E249374B6.idx  type_traits.DEFEB13FC1D36252.idx
GUI/: CMakeLists.txt  generator.cpp  generator.h  generator.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
LOGIC/: CMakeLists.txt  main.cpp
LOGIC/control_models/: feedback_loop.hpp
LOGIC/control_models/arx/: arx.cpp  arx.hpp
LOGIC/control_models/pid/: pid.hpp
LOGIC/filesystem/: abstract_file_factory.hpp  csv.hpp
LOGIC/signal_generators/: sinus.hpp
LOGIC/test/: testy.cpp
LOGIC/utils/: errors.hpp  rng.hpp  units.hpp
control_models/: feedback_loop.hpp  model.hpp
control_models/pid/: pid.hpp
signal_generators/: signal_generator.hpp  single_jump.hpp  sinus.hpp  square.hpp
test/: testy.cpp
utils/: global_storage.hpp
